--- a/normalize.css
+++ b/normalize.css
@@ -21,6 +21,8 @@
    */
   
   body {
+    font-family: 'Bitter', serif;
+    font-family: 'Catamaran', sans-serif;
     margin: 0;
   }
   
@@ -38,6 +40,8 @@
    */
   
   h1 {
+    font-family: 'DM Serif Display', serif;
+    font-family: 'PT Serif', serif;
     font-size: 2em;
     margin: 0.67em 0;
   }
