--- a/normalize.css
+++ b/normalize.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Roboto:wght@500&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -22,7 +23,7 @@
   
   body {
     font-family: 'Akshar', sans-serif;
-
+    background-color: aquamarine;
     margin: 0;
   }
   
