--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Roboto:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Roboto:wght@500&display=swap');
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
@@ -22,7 +22,7 @@
    * Remove the margin in all browsers.
    */
   
-   .course{
+  .course{
     font-family: 'Roboto', sans-serif;
     display: grid;
     grid-template-columns: 2fr;
