--- a/css/normalize.css
+++ b/css/normalize.css
@@ -10,7 +10,7 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
- html {
+html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
   }
@@ -22,26 +22,41 @@
    * Remove the margin in all browsers.
    */
   
-  .course{
-    font-family: 'Roboto', sans-serif;
-    display: grid;
-    grid-template-columns: 2fr;
-    grid-template-rows: 2fr;
-  }
-  .courses{
-    grid-column: 1/2;
-    grid-row: 2/2;
-    
-  }
-  .profile-picture{
+body {
+  display:grid;
+  margin: 1em;
+  grid-template-columns: 400px 200px;
+  grid-template-rows:100px 200px 50px;
+}
+header{
+  margin:0;
+  grid-column: 1/3;
+  grid-row: 1/2;
+
+}
+.courseName{
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  align-items: left;
+  grid-column: 1/2;
+  grid-row: 2/2;
+}
+
+  .picture{
+    align-items: right;
     grid-column: 2/2;
     grid-row: 2/2;
+    margin-top: -3em;
+    margin-right: -2em;
   }
   
-  body {
-    margin: 0;
-    display: grid;
-    grid-template-columns: 600px;
+
+  footer {
+    font-family: 'Akshar', sans-serif;
+    padding: 1em;
+    align-items: center;
+    grid-column: 1/3;
+    grid-row: 3/3;
   }
   
   /**
@@ -58,7 +73,7 @@
    */
   
   h1 {
-    font-family: 'Akshar', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 2em;
     margin: 0.67em 0;
     color:rgb(29, 29, 29);
@@ -66,6 +81,11 @@
     border-radius: 25px;
     padding: 20px;
     padding-left: 40px;
+  }
+
+  h4{
+    font-size: 2em;
+    font-family: 'Akshar', sans-serif;
   }
   
   /* Grouping content
