--- a/css/normalize.css
+++ b/css/normalize.css
@@ -98,6 +98,19 @@
     padding-left: 40px;
   }
 
+  .examples-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows:1fr 1fr 1fr 1fr 1fr;
+  }
+
+
+
+
+
+
+
+
   
   /* Grouping content
      ========================================================================== */
