--- a/css/normalize.css
+++ b/css/normalize.css
@@ -102,28 +102,35 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows:1fr;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    color: rgb(58, 58, 58);
+    background-color: #e1e1e1;
+    margin: 1em;
+    margin: 2em auto;
   }
 
   .hierarchy{
     grid-column: 1/2;
     grid-row: 1/2;
-    align-self: auto;
-    padding: 2em;
+    box-shadow: 3px 3px 5px 3px #ccc;
+    margin:1em;
+    padding: 7%;
   }
-
   .white-space{
     grid-column: 2/3;
     grid-row: 1/2;
-    align-self: stretch;
-    padding: 2em;
-
+    box-shadow: 3px 3px 5px 3px #ccc;
+    margin:1em;
+    padding: 7%;
   }
 
   .contrast{
     grid-column: 3/4;
     grid-row: 1/2;
-    align-self: center;
-    padding: 2em;
+    box-shadow: 3px 3px 5px 3px #ccc;
+    margin:1em;
+    padding: 7%;
   }
 
 
