--- a/css/normalize.css
+++ b/css/normalize.css
@@ -102,14 +102,17 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows:1fr;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Akshar', sans-serif;
     font-weight: bold;
     color: rgb(58, 58, 58);
     background-color: #e1e1e1;
-    margin: 1em;
     margin: 2em auto;
+    padding: 2%;
   }
+  .example1, .example2, .example3 {
+    width: 100%;
 
+  }
   .hierarchy{
     grid-column: 1/2;
     grid-row: 1/2;
@@ -117,6 +120,7 @@
     margin:1em;
     padding: 7%;
   }
+
   .white-space{
     grid-column: 2/3;
     grid-row: 1/2;
