--- a/Lesson1/css/medium.css
+++ b/Lesson1/css/medium.css
@@ -1,4 +1,4 @@
-@media (min-width: 780px) and (max-width: 1200px){
+@media (min-width: 32.5em) {
     .picture{
         float: right;
     }
@@ -10,5 +10,3 @@
         font-size: 1em;
     }
 }
-
-    
