--- a/Lesson2/CSS/medium.css
+++ b/Lesson2/CSS/medium.css
@@ -1,13 +1,17 @@
 @media (max-width: 768px) {
 
     h1 {
-        font-size: 1.5em;
+        font-size: 2.2em;
         padding-top: 20px;
       }
       
     h2 {
-        font-size: 1.1em;
+        font-size: 1.8em;
       }
+
+    p{
+        font-size: 1.4em;
+    }
       
     nav {
         margin: 0 auto;
@@ -23,4 +27,15 @@
     nav a {
         font-size: 1.2em;
     }
+
+    .logo{
+        max-width: 60%;
+
+    }
+
+    .persona{
+        max-width: 40%;
+    
+      }
+
 }
