--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -7,6 +7,7 @@
   }
 body{
     background-color: var(--primary-color);
+    font-family: 'Akshar', sans-serif;
 }
 
 header{
@@ -14,6 +15,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 header img{
@@ -24,4 +26,8 @@ header img{
 .headings{
     display: flex;
     flex-direction: column;
+}
+
+h1, h2{
+    font-family:  'Bebas Neue', cursive;
 }
