--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -31,3 +31,26 @@ header img{
 h1, h2{
     font-family:  'Bebas Neue', cursive;
 }
+
+nav{
+    margin: 0;
+    background-color: var(--accent1-color);
+    padding: 1rem;
+}
+.navigation{
+    list-style: none;
+    text-align: center;
+    padding:0;
+
+}
+.navigation li:first-child {
+    display: block;
+}
+
+.navigation li{
+    display:none;
+}
+
+.responsive li {
+    display: block;
+}
