--- a/weather/css/large.css
+++ b/weather/css/large.css
@@ -16,6 +16,22 @@
     }
 
 
+    .map-contact{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin:0;
+        color: var(--primary-color);
+        align-items: left;
+        padding: 0 3rem;
+        background-color: var(--secondary-color);
+    
+    }
+
+    #contact{
+        margin:1rem;
+    }
+    
+
 }
 
     
