--- a/Lesson1/css/normalize.css
+++ b/Lesson1/css/normalize.css
@@ -132,7 +132,7 @@
   footer {
     font-family: 'Akshar', sans-serif;
     grid-row: 3/3;
-    color:rgb(221, 221, 221);
+    color:white;
     background-color:rgb(71, 93, 130);
     border-radius: 10px;
     padding: 1em;
