--- a/Lesson2/CSS/large.css
+++ b/Lesson2/CSS/large.css
@@ -8,7 +8,6 @@
 }
 header{
   color:black;
-  background-color:rgb(214, 214, 214);
 }
 
 body{
@@ -20,7 +19,7 @@ body{
 }
 
 footer{
-  background-color: rgb(214, 214, 214);
+  background-color: white;
   padding: 1rem;
   color:black;
 }
@@ -112,4 +111,7 @@ nav ul {
   padding: 10px;
   background-color: bisque;
   text-align: center;
+}
+#header-nav-bar{
+  background-color: white;
 }
