--- a/Lesson2/CSS/large.css
+++ b/Lesson2/CSS/large.css
@@ -109,9 +109,7 @@ nav ul {
   grid-template-rows: 1fr;
   font-size: 1rem;
   padding: 10px;
-  background-color: bisque;
-  text-align: center;
-}
-#header-nav-bar{
   background-color: white;
+  text-align: center;
+  color:black;
 }
