--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -73,6 +73,7 @@ nav{
     margin: 0;
     background-color: var(--accent1-color);
     padding: 1rem;
+    color:#232e49;
 
 }
 .navigation{
@@ -97,5 +98,6 @@ footer{
     background-color: var(--accent1-color);
     padding:2em;
     text-align: center;
+    color:#232e49;
 
 }
