--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -64,6 +64,21 @@ h1, h2{
     color: var(--secondary-color);
     box-shadow: 5px 5px 5px 5px #ccc;
 }
+
+#hero{
+    width: 100%;
+    max-height: 350px;
+}
+
+.stats{
+    background: var(--accent1-color);
+    border: 1px solid #000;
+    padding: 0.5rem 1.5rem;
+    box-shadow: 0 0 30px #333;
+    opacity: 1;
+    font-size: 14px;
+}
+
 a{
     text-decoration: none;
     color:#232e49;
