--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -79,9 +79,17 @@ h1, h2{
     font-size: 14px;
 }
 
+.forecast{
+    display: none;
+}
+
 a{
     text-decoration: none;
     color:#232e49;
+}
+
+li:hover {
+    font-size: large;
 }
 
 nav{
