--- a/weather/css/large.css
+++ b/weather/css/large.css
@@ -29,6 +29,7 @@
         bottom: 12px;
         left:10px;
         opacity: 0.8;
+        font-size: 14px;
 
     }
 
@@ -44,6 +45,9 @@
         box-shadow: 5px 5px 2px #aaaaaa;
         font-size: 14px;
 
+    }
+    .calendar img{
+        max-width: 80%;
     }
     .map-contact{
         display: grid;
