--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -27,14 +27,7 @@ header img{
     height: auto;
 }
 
-.map-contact{
-    display: block;
-    margin:0;
-    color: var(--primary-color);
-    background-color: var(--secondary-color);
-    padding:0.5rem;
-    padding-top: 1rem;
-}
+
 #map{
     width: 300px;
 }
@@ -101,14 +94,17 @@ h1, h2{
 .map{
     max-width: 250px;
   }
-
+.contact img{
+    padding: 2px;
+}
 .map-and-contact{
     justify-content: center;
+    align-items: center;
     column-gap:4rem;
     background-color: var(--secondary-color);
     color:var(--primary-color);
     padding:1.5rem;
-    text-align: left;
+    margin-top:1rem;
   }
 
 a{
