updated weather temperature

--- a/weather/css/large.css
+++ b/weather/css/large.css
@@ -64,6 +64,10 @@
           column-gap:15%;
           text-align: left;
         }
+
+    .active{
+        text-decoration: underline;
+    }
 }
 
     
