used explicit width for images

--- a/weather/css/large.css
+++ b/weather/css/large.css
@@ -63,11 +63,12 @@
     
     .map{
         max-width: 20%;
+        min-width: 90px;
         height: auto;
       }
     .map-and-contact{
           display:flex;
-          column-gap:15%;
+          column-gap:5%;
           text-align: left;
         }
 
