--- a/weather/css/large.css
+++ b/weather/css/large.css
@@ -1,80 +1,12 @@
-@media only screen and (min-width: 32.5em){
-    main{
-        margin:auto 2rem;
-    }
-    body{
-        margin-left:5rem;
-        margin-right:5rem;
-        box-shadow: 5px 5px 5px 5px #ccc;
-    }
-
-    header img {
-        width: 180px;
-    }
-    .navigation {
-        display: flex;
-    }
-
-    .navigation li:first-child{
-        display:none;
-    }
-
-    .navigation li {
-        display: block;
-        flex: 1 1 100%;
-    }
-
-    .weather-summary-div{
-        margin: 10px auto;
-        position: relative;
-    }
-
-    
-    .stats{
-        position: absolute;
-        bottom: 12px;
-        left:10px;
-        opacity: 0.8;
-        font-size: 14px;
-
-    }
-
-    .forecast-heading{
-        display:block;
-    }
-
-    .forecast{
-        display: flex;
-        justify-content: center;
-        column-gap:5px;
-    }
-
-    .forecast div{
-        background-color: white;
-        padding: 1.2rem;
-        box-shadow: 5px 5px 2px #aaaaaa;
-        font-size: 14px;
+@media only screen and (min-width: 900px){
+    main div.weather-summary-div section{
+        top: 0.5rem;
+        bottom: 20%;
+        width: 30%;
+        margin: 1.5rem;
+        font-size: 22px;
+        padding-bottom:2rem;
         
     }
-    .calendar img{
-        display: inline;
-        max-width: 400px;
-    }
-    
-    .map{
-        max-width: 20%;
-        min-width: 90px;
-        height: auto;
-      }
-    .map-and-contact{
-          display:flex;
-          column-gap:5%;
-          text-align: left;
-        }
-
-    .active{
-        text-decoration: underline;
-    }
 }
-
     
