--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -6,7 +6,7 @@
     --accent1-color: #FFB133;
   }
 
-  #prestonbanner{
+#prestonbanner{
     color:var(--primary-color);
     background-color:var(--secondary-color) ;
     padding:1.5rem;
@@ -26,14 +26,12 @@ header{
     padding: 5px 0;
     display: flex;
     align-items: center;
-
 }
 
 header img{
     width: 130px;
     height: auto;
 }
-
 
 #map{
     width: 300px;
@@ -54,11 +52,27 @@ h1, h2{
     font-size: 40px;
 }
 
-#hero{
-    width: 100%;
-    max-height: 350px;
+/*Hero*/
+main div.weather-summary-div{
+    width: 90%;
+    margin: 0 ;
 }
 
+main div.weather-summary-div img{
+    width: 100%;
+    margin: 0 0 0 2%;
+}
+
+.stats{
+    background: var(--accent1-color);
+    border: 1px solid #000;
+    padding: 0.5rem 1.5rem;
+    box-shadow: 0 0 30px #333;
+    opacity: 1;
+    font-size: 18px;
+    margin-left: 3rem;
+}
+/*//////////*/
 .calendar{
     display: block;
     margin: 1rem;
@@ -67,7 +81,6 @@ h1, h2{
     background-color:white;
     box-shadow: 5px 5px 5px 5px #ccc;
 }
-
 .calendar img{
     display: none;
     width: 100%;
@@ -79,14 +92,7 @@ h1, h2{
     font-size: 20px;
     font-weight: bolder;
 }
-.stats{
-    background: var(--accent1-color);
-    border: 1px solid #000;
-    padding: 0.5rem 1.5rem;
-    box-shadow: 0 0 30px #333;
-    opacity: 1;
-    font-size: 18px;
-}
+
 
 .forecast{
     display: none;
