--- a/weather/css/large.css
+++ b/weather/css/large.css
@@ -4,9 +4,10 @@
         bottom: 20%;
         width: 30%;
         margin: 1.5rem;
-        font-size: 22px;
+        font-size: 20px;
+        font-weight: bold;
         padding-bottom:2rem;
         
     }
+
 }
-    
