--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -36,10 +36,15 @@
         bottom: 7%;
         width: 40%;
         margin: 1rem;
-        font-size: 80%;
+        font-size: 70%;
         padding-bottom: 10;
         position: absolute;
         opacity: 0.8;
+    }
+
+    .weathersummary{
+        font-size: 18px;
+        text-decoration: underline ;
     }
 
     .forecast-heading{
