--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -16,8 +16,10 @@ body{
     background-color: var(--primary-color);
     font-family: 'Akshar', sans-serif;
     color: var(--secondary-color);
-    text-align: center;
     margin:auto;
+}
+p{
+    text-align: center;
 }
 main{
     margin: 10px;
@@ -184,4 +186,54 @@ footer{
     text-align: center;
     color:#232e49;
 
+}
+/*--------- FORM --------*/
+form fieldset {
+    margin:2rem 0;
+    border: 1px solid #232e49;
+    border-radius: 10px;
+    padding: 1rem;
+    font-size: 1.2rem;
+}
+
+form legend {
+    color:var(--secondary-color);
+    margin: 0 1rem;
+    padding:  0 0.5rem;
+}
+
+form label.top, form div {
+    display: block;
+    color:var(--secondary-color);
+    font-size:.8rem;
+    text-align: left;
+    padding: 0.5rem;
+}
+
+form label.top input, form label.top select{
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #555;
+    width: 90%;
+    max-width: 30rem;
+}
+
+form label.sbs {
+    display: block;
+    padding: .5rem 0;
+    color: #555;
+}
+
+#comments{
+    width: 97%;
+    height: 100px;
+    color:#555;
+}
+
+#dangerlevel{
+    font-size: 1rem;
+    color: var(--secondary-color);
 }
