--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -100,8 +100,6 @@
         height: 85%;
     }
 
-    /*//////////////////////*/
-
     /*/-----------FORM-----------/*/
     form label.top, form div {
         font-size: 1rem;
@@ -110,6 +108,14 @@
 
     form label.top input, form label.top select{
         padding: 0.3rem;
+    }
+
+    form input.submitBtn {
+        padding: .75rem 1.5rem;
+        margin: 0 0 2rem 2%;
+        width: 96%;
+        max-width: 10rem;
+    }
         
 
-}}
+}
