--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -237,3 +237,15 @@ form label.sbs {
     font-size: 1rem;
     color: var(--secondary-color);
 }
+
+form input.submitBtn {
+    border: none;
+    background-color:var(--accent1-color);
+    color:var(--primary-color);
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    position:center;
+    
+}
