--- a/Lesson-9/prophets.css
+++ b/Lesson-9/prophets.css
@@ -19,9 +19,23 @@ main{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
     padding: 1rem 0; 
 }
-h2, h1{
+
+footer{
+    display: block;
+    text-align: center;
+    color: var(--secondary-color);
+    background-color: var(--heading-font-color);
+    padding: 2rem;
+    font-family: 'Lato', sans-serif;
+    font-size: 0.8rem;
+    font-weight: bold;
+}
+
+
+h2, h1 {
     font-family: 'Ubuntu', sans-serif;
     color: var(--heading-font-color);
+    font-weight: bold;
 }
 
 p{
