--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -124,9 +124,10 @@
 
     .cards img{
         width: 80%;
+        height: 90%;
     }
 
-    section{
+    .cards section{
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
@@ -144,6 +145,15 @@
         grid-column: 2/2;
         grid-row: 1/1;
     }
+
+    .statsdiv h2{
+        font-size: 1rem;
+    }
+
+    div .imgdiv{
+        padding-top: 10% ;
+    }
+
 
 
 
