--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -133,7 +133,23 @@
         grid-template-rows: 1fr;
     }
 
+    .img1, .img3 {
+        grid-column: 1/2;
+        grid-row:1/2;
+    }
 
+    .data1, .data3{
+        grid-column: 2/2;
+        grid-row: 1/2;
+    }
+
+    .img2 {
+        grid-column: 2/2;
+    }
+
+    .data2{
+        grid-column: 1/2;
+    }
     .statsdiv{
         grid-column: 1/2;
         grid-row: 1/1;
@@ -141,10 +157,10 @@
         font-size: 0.8rem;
     }
 
-    .imgdiv{
+    /* .imgdiv{
         grid-column: 2/2;
         grid-row: 1/1;
-    }
+    } */
 
     .statsdiv h2{
         font-size: 1rem;
