updated hero images

--- a/Lesson-06/weather/css/medium.css
+++ b/Lesson-06/weather/css/medium.css
@@ -172,7 +172,10 @@
         padding-top: 10% ;
     }
 
+    /*--------EVENTS---------*/
 
-
-
+    #events{
+        margin: 0.8rem;
+        padding: 1rem;
+    }
 }
