--- a/Lesson-11/weather/css/small.css
+++ b/Lesson-11/weather/css/small.css
@@ -80,6 +80,7 @@ h1, h2{
 main div.weather-summary-div{
     width: 90%;
     margin: 0 ;
+    margin: 0 0 0 2%;
 }
 
 main div.weather-summary-div img{
