--- a/scoots/scoots-s.css
+++ b/scoots/scoots-s.css
@@ -4,7 +4,7 @@
     --background-color: #FFFFFF;
     --primary-color: #032D64;
     --text-color:#222222;
-    --accent1-color: #1275F8;
+    --accent1-color: #967920;
   }
 
 
@@ -43,11 +43,14 @@ header {
 nav{
     margin: 0;
     background-color: var(--background-color);
+    color:var(--primary-color);
     padding: 1rem;
-    color:var(--text-color);
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.7rem;
-
+    
+}
+nav a{
+    color:var(--primary-color);
 }
 .navigation{
     list-style: none;
@@ -78,4 +81,5 @@ footer{
 footer p, footer a{
     text-decoration: none;
     color:var(--background-color);
+    font-family: 'Source Sans Pro', sans-serif;;
 }
