--- a/scoots/scoots-m.css
+++ b/scoots/scoots-m.css
@@ -52,6 +52,7 @@
         color: var(--primary-color);
         background-color: #967920;
         padding: 1rem 2rem;
+        text-decoration: underline;
     }
 
     li:hover {
@@ -62,12 +63,29 @@
     .title{
 
             font-size: 2.7rem;
+            text-decoration: overline underline;
+
+
 
     }
 
+    .weather-div{
+        display: flex;
+        justify-content: center;
+        column-gap: 1rem;
+        
+    }
 
+    #current-weather-div{
+        padding: 1rem;
+        background-color: var(--accent1-color);
+        width:100%;
 
+    }
 
+    #forecast{
+        background-color: var(--accent1-color);
+    }
 
 
 }
