--- a/scoots/scoots-m.css
+++ b/scoots/scoots-m.css
@@ -86,6 +86,8 @@
     #forecast{
         background-color: var(--accent1-color);
     }
-
+    /* #option1{
+        display: block;
+    } */
 
 }
