--- a/scoots/scoots-l.css
+++ b/scoots/scoots-l.css
@@ -66,8 +66,8 @@
     #rental1, #rental2, #rental3{
         padding: 2rem;
         margin: 2rem 4rem;
-        box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-        color: var(--primary-color);
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
     }
 
     /* #info1, #info2, #info3{
