--- a/scoots/scoots-s.css
+++ b/scoots/scoots-s.css
@@ -72,7 +72,7 @@ nav a{
     display: block;
 }
 
-/* BUTTON */
+/* HOME BUTTON */
 
 #button{
     background-color: var(--primary-color);
@@ -85,6 +85,9 @@ nav a{
     display: inline-block;
     font-size: 16px;
     cursor: pointer;
+}
+#button:hover {
+    background-color: var(--accent1-color);
 }
 
 /* FOOTER */
@@ -164,5 +167,84 @@ th, td {
     color: var(--primary-color);
 
 }
+
+/* RESERVATION FORM*/
+
+form{
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+    font-family: 'Source Sans Pro', sans-serif;
+    color:var(--text-color);
+}
+
+legend{
+    font-size: larger;
+    font-family: 'Tiro Kannada', serif;
+    text-decoration: underline;
+    color: var(--primary-color);
+}
+
+input[type=text], input[type=tel], input[type=email], select {
+    width: 100%;
+    max-width: 20rem;
+    padding:1rem;
+    margin: 0.7rem 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+    input[type=submit] {
+    width: 100%;
+    max-width: 20rem;
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    padding: 1rem;
+    margin: 0.7rem 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+    input[type=submit]:hover {
+    background-color: var(--accent1-color);
+}
+
+    form div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+    fieldset {
+    border: 1px solid #ccc;
+    margin: 1rem 0; 
+}
+
+    form label.top, form div {
+    display: block;
+    font-size: 0.8rem;
+
+
+}
+
+    #rentalinfo label{
+        padding:1rem;
+    }
+
+    form label.sbs{
+        display: block;
+    }
+
+    #comments{
+        border: 1px solid #ccc;
+        width: 97%;
+        max-width: 600px;
+        height: 100px;
+        color:#555;
+    }
+
 
 
