--- a/scoots/scoots-s.css
+++ b/scoots/scoots-s.css
@@ -245,6 +245,19 @@ input[type=text], input[type=tel], input[type=email], select {
         height: 100px;
         color:#555;
     }
+    .agreement{
+        overflow-y: auto;
+        height: 150px;
+        width: 90%;
+        border: 1px solid #ddd;
+        padding: 0;
+        font-size: 0.7rem;
+        text-align: left;
+        margin:auto;
+        inline-size: 100%;
+        overflow-wrap: break-all;
+        }
+
 
 
 
